tried to fix horizontal scrolling

--- a/inreins/style.css
+++ b/inreins/style.css
@@ -2,7 +2,8 @@
 
 html, body {
     width: 100%;
-    overflow: scroll;
+    overflow-y: scroll;
+    overflow-x: hidden;
     overscroll-behavior: none; 
     margin: 0;
     --dot-bg: rgb(255, 255, 255);
